Website serving static image

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PicoW HTTP server sample app</title>
     <link rel="stylesheet" href="picow.css">
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="/img/5.png" type="image/png" />
   </head>
 
   <body>
@@ -71,14 +71,7 @@
       
       <!-- Right column with the Pi-Cow -->
       <section class="column" id="cow_column">
-	<pre class="cow">
- __________
-< http://π >
- ----------
-  \  ^__^
-   \ (ππ)\
-     (__)\
-	</pre>
+        <img src="img/5.png" alt="selfie">
       </section>
     </main>
 
