--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
       
       <!-- Right column with the Pi-Cow -->
       <section class="column" id="cow_column">
-        <img src="/picture" alt="selfie">
+        <img id="selfie" src="/picture" alt="selfie">
       </section>
     </main>
 
